--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Dave Portfolio</title>
     <link href="./src/output.css" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="./src/img/icons.png">
 </head>
 <body>
     <!-- Header -->
