ft: update resume

--- a/index.html
+++ b/index.html
@@ -159,10 +159,9 @@
                             <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">Juli 2023 - Mei 2026</time>
                             <h3 class="text-lg lg:text-[20px] mb-1 mt-1 font-bold text-dark">SMK 1 Dlanggu</h3>
                             <ol class="text-[14px] lg:text-[16px] text-secondary dark:text-slate-400 list-disc ms-4">
-                                <li>Pemodelan Perangkat Lunak</li>
-                                <li>Pemrograman Berorientasi Objek</li>
-                                <li>Pemrograman Web dan Perangkat Bergerak</li>
-                                <li>Basis Data</li>
+                                <li>GPA: 89,3 / 100</li>
+                                <li>Mata Pelajaran Relevan: Pemodelan Perangkat Lunak, Pemrograman Web dan Perangkat Bergerak, 
+                                    Pemrograman Berorientasi Objek, Basis Data. </li>
                             </ol>
                             <div class="absolute w-3 h-3 bg-primary rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900"></div>
                             <time class="mb-1 text-sm font-normal leading-none text-white dark:text-dark"></time>
@@ -205,9 +204,9 @@
                                 <li>Melaksanakan edukasi dan sosialisasi pencegahan penyalahgunaan narkotika, psikotropika, dan
                                     zat adiktif (narkoba), minuman keras, merokok, dan HIV AIDS.</li>
                                 <li>Membantu PMR untuk membagikan pil penambah darah ke siswi.</li>
-                                <li>Menjadi Wakil Ketua Pelaksana event classmeeting yang bertujuan untuk pelatihan mental
-                                    kompetitif dan sportivitas siswa.</li>
-                                <li>Mengadakan jumat bersih dan sehat.</li>
+                                <li>Menjadi Wakil Ketua Pelaksana event classmeeting yang bertanggung jawab mendukung 
+                                    ketua pelaksana dalam merencanakan dan mengoordinasikan kegiatan.</li>
+                                
                         </li>
                             </ol>
                         </li>
@@ -218,9 +217,11 @@
                             <h3 class="text-lg lg:text-[20px] mb-1 mt-1 font-bold text-dark">OSIS SMKN 1 Dlanggu</h3>
                             <h4 class="text-[12px] lg:text-[14px] mb-1 font-bold text-dark">Koordinator Seksi Bidang Teknologi Informasi dan Komunikasi</h4>
                             <ol class="text-[14px] lg:text-[16px] text-secondary dark:text-slate-400 list-disc ms-4">
-                                <li>Mengkoordinator sosial media OSIS.</li>
-                                <li>Menetapkan kebijakan program kerja. </li>
-                                <li>Mendokumentasikan setiap kegiatan.</li>
+                                <li>Bertanggung jawab dalam pengelolaan sosial media OSIS. </li>
+                                <li>Berperan dalam mendokumentasikan setiap kegiatan sekolah, termasuk pengambilan gambar dan video 
+                                    dengan keterampilan mengoperasikan kamera secara profesional. </li>
+                                <li>Berperan dalam pembuatan konten kreatif untuk berbagai platform digital, dengan fokus pada 
+                                    penyampaian informasi yang menarik dan relevan bagi siswa.</li>
                             </ol>
                         </li>
                     </ol>
