ft: update about section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
                     <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Kuy kenalan, tak kenal maka tak sayang</h2>
-                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Siswa semester 3 Jurusan Rekayasa Perangkat Lunak di SMKN 1 Dlanggu yang memiliki ketertarikan pada bidang IT. Memiliki kemampuan dalam hal kepemimpinan, komunikasi, mampu bekerja dalam tim dan mudah beradaptasi dengan hal baru serta memiliki pemahamam mengenai prosedur kerja baik prosedur operasional maupun prosedur keselamatan kerja.</p>
+                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Siswa semester 3 Jurusan Rekayasa Perangkat Lunak di SMKN 1 Dlanggu yang memiliki ketertarikan 
+                        pada bidang IT. Memiliki kemampuan dalam hal kepemimpinan, komunikasi, mampu bekerja dalam tim 
+                        dan mudah beradaptasi dengan hal baru serta bersemangat untuk belajar dan mengikuti perkembangan 
+                        terbaru dalam dunia teknologi informasi. </p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Let's Talk with Me!</h3>
